# arrastrador

./: architecture.html  architecture.mmd
smart-crawler/: Cargo.toml  Dockerfile  README.md
smart-crawler/browser-service/: Dockerfile  browser_service.py  requirements.txt
smart-crawler/browser-service/scripts/: wikipedia_org.py
smart-crawler/docs/: dev.md
smart-crawler/kubernetes/: controller.yaml  crawler-deployment.yaml  rbac.yaml  storage.yaml  worker.yaml
smart-crawler/src/: main.rs
smart-crawler/src/browser/: behavior.rs  fingerprint.rs  mod.rs  remote.rs  script.rs  session.rs
smart-crawler/src/cli/: commands.rs  config.rs  mod.rs  scripts.rs
smart-crawler/src/crawler/: controller.rs  mod.rs  scheduler.rs  task.rs
smart-crawler/src/proxy/: manager.rs  mod.rs  vpn.rs
smart-crawler/src/storage/: mod.rs  processed.rs  queue.rs  raw.rs
smart-crawler/src/utils/: logging.rs  metrics.rs  mod.rs
