[package]
name = "smart-crawler"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A smart, modern web crawler designed to be undetectable"
readme = "README.md"

[dependencies]
# Command line argument parsing
clap = { version = "4.4", features = ["derive"] }
# Async runtime
tokio = { version = "1.35", features = ["full"] }
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Configuration
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
# HTTP client
reqwest = { version = "0.11", features = ["json", "cookies", "rustls-tls"] }
# HTML parsing
scraper = "0.18"
# Queue and cache
redis = { version = "0.23", features = ["tokio-comp"] }
# Database
mongodb = "2.7"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "json", "chrono"] }
# Browser automation
thirtyfour = "0.31" # Selenium WebDriver client
fantoccini = "0.19"  # WebDriver client alternative
# Kubernetes integration (optional)
kube = { version = "0.87", features = ["runtime", "derive"], optional = true }
k8s-openapi = { version = "0.20", features = ["v1_28"], optional = true }
# Utilities
chrono = "0.4"
rand = "0.8"
url = "2.4"
futures = "0.3"
async-trait = "0.1"

[features]
default = []
kubernetes = ["kube", "k8s-openapi"]

[dev-dependencies]
mockall = "0.11"
tokio-test = "0.4"
wiremock = "0.5"

[[bin]]
name = "crawler"
path = "src/main.rs"