[package]
name = "smart-crawler"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A smart, modern web crawler designed to be undetectable"
readme = "README.md"

[dependencies]
# Command line argument parsing
clap = { version = "4.4", features = ["derive"] }

# Async runtime - only include what we need
tokio = { version = "1.35", features = ["rt", "rt-multi-thread", "macros", "time", "fs", "process", "io-util", "sync"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# HTTP client with required features
reqwest = { version = "0.11", features = ["json", "cookies", "rustls-tls", "socks"] }

# HTML parsing
scraper = "0.18"

# Storage backends - mandatory
redis = { version = "0.23", features = ["tokio-comp"] }
mongodb = { version = "2.7" }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "json", "chrono"] }

# Browser automation
thirtyfour = { version = "0.31" }

# Kubernetes integration - mandatory
kube = { version = "0.87", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20", features = ["v1_28"] }

# Utilities - all mandatory
chrono = "0.4"
url = "2.4"
futures = "0.3"
async-trait = "0.1"
uuid = { version = "1.3", features = ["v4", "serde"] }
regex = "1.8"
directories = "5.0"
rand = "0.8"

[features]
default = ["kubernetes", "distributed"]

# Simplified feature setup - all core dependencies are now mandatory
standalone = []
distributed = []
kubernetes = []

[dev-dependencies]
mockall = "0.11"
tokio-test = "0.4"
wiremock = "0.5"

[[bin]]
name = "crawler"
path = "src/main.rs"